Smells and java 17