@@ -41,6 +41,7 @@ import io.micronaut.servlet.http.ServletHttpResponse;
 
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.core.annotation.Nullable;
+
 import java.io.*;
 import java.net.URI;
 import java.util.*;
@@ -50,13 +51,13 @@ import java.util.stream.Collectors;
  * Implementation of Micronaut's request interface for Azure.
  *
  * @param <B> The body type
- * @since 1.0
  * @author graemerocher
+ * @since 1.0
  */
 @Internal
 public class AzureFunctionHttpRequest<B>
-        implements ServletHttpRequest<HttpRequestMessage<Optional<String>>, B>,
-        ServletExchange<HttpRequestMessage<Optional<String>>, HttpResponseMessage> {
+    implements ServletHttpRequest<HttpRequestMessage<Optional<String>>, B>,
+    ServletExchange<HttpRequestMessage<Optional<String>>, HttpResponseMessage> {
     private static final Map<String, String> UPPERCASE_HEADER_TO_HEADER;
 
     static {
@@ -179,10 +180,10 @@ public class AzureFunctionHttpRequest<B>
      * @param executionContext The execution context.
      */
     public AzureFunctionHttpRequest(
-            String contextPath,
-            HttpRequestMessage<Optional<String>> azureRequest,
-            MediaTypeCodecRegistry codecRegistry,
-            ExecutionContext executionContext) {
+        String contextPath,
+        HttpRequestMessage<Optional<String>> azureRequest,
+        MediaTypeCodecRegistry codecRegistry,
+        ExecutionContext executionContext) {
         this.executionContext = executionContext;
         this.azureRequest = azureRequest;
         this.azureResponse = new AzureFunctionHttpResponse<>(azureRequest, codecRegistry);
@@ -196,6 +197,23 @@ public class AzureFunctionHttpRequest<B>
         this.method = method;
         this.headers = new AzureMutableHeaders(toMultiValueMap(azureRequest.getHeaders()), ConversionService.SHARED);
         this.codecRegistry = codecRegistry;
+    }
+
+    /**
+     * Given a HTTP Header it will attempt to normalize to a {@link HttpHeaders} constant.
+     * If it does not find any matching constant, it will return the supplied header name.
+     * For example:
+     * - Accept -> Accept
+     * - accept -> Accept
+     * - Turbo-Frame -> Turbo-Frame
+     *
+     * @param headerName HTTP Header name
+     * @return A matching {@link HttpHeaders} constant or the supplied header name if no match found.
+     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616.html">RFC 2616 - HTTP Headers should be case insensitive</a>
+     */
+    @NonNull
+    private static String normalizeHeaderName(@NonNull String headerName) {
+        return UPPERCASE_HEADER_TO_HEADER.getOrDefault(headerName.toUpperCase(Locale.ENGLISH), headerName);
     }
 
     private Map<CharSequence, List<String>> toMultiValueMap(Map<String, String> headers) {
@@ -223,7 +241,7 @@ public class AzureFunctionHttpRequest<B>
     @Override
     public InputStream getInputStream() throws IOException {
         return new ByteArrayInputStream(
-                azureRequest.getBody().map(s -> s.getBytes(getCharacterEncoding())).orElseThrow(() -> new IOException("Empty Body"))
+            azureRequest.getBody().map(s -> s.getBytes(getCharacterEncoding())).orElseThrow(() -> new IOException("Empty Body"))
         );
     }
 
@@ -385,22 +403,6 @@ public class AzureFunctionHttpRequest<B>
     }
 
     /**
-     * Given a HTTP Header it will attempt to normalize to a {@link HttpHeaders} constant.
-     * If it does not find any matching constant, it will return the supplied header name.
-     * For example:
-     * - Accept -> Accept
-     * - accept -> Accept
-     * - Turbo-Frame -> Turbo-Frame
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616.html">RFC 2616 - HTTP Headers should be case insensitive</a>
-     * @param headerName HTTP Header name
-     * @return A matching {@link HttpHeaders} constant or the supplied header name if no match found.
-     */
-    @NonNull
-    private static String normalizeHeaderName(@NonNull String headerName) {
-        return UPPERCASE_HEADER_TO_HEADER.getOrDefault(headerName.toUpperCase(Locale.ENGLISH), headerName);
-    }
-
-    /**
      * Models the http parameters.
      */
     private final class AzureParameters implements HttpParameters {
@@ -435,9 +437,10 @@ public class AzureFunctionHttpRequest<B>
         @Override
         public Collection<List<String>> values() {
             return azureRequest.getQueryParameters()
-                    .values()
-                    .stream().map(Collections::singletonList)
-                    .collect(Collectors.toList());
+                .values()
+                .stream()
+                .map(Collections::singletonList)
+                .toList();
         }
 
         @Override
